--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,12 @@
       <version>5.10.3</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.xerial</groupId>
+      <artifactId>sqlite-jdbc</artifactId>
+      <version>3.46.1.3</version>
+    </dependency>
   </dependencies>
 
   <build>
