--- a/config-example.json
+++ b/config-example.json
@@ -18,6 +18,12 @@
   "aliases": {
     "#password": ["E9crNWzX"]
   },
+  "textImageTriggers": [
+    {
+      "pattern": "^Mr Werks selects a bit of chalk from the chalk tray and then scribbles noisily on the job board\\.$",
+      "color": "CYAN"
+    }
+  ],
   "transcript": {
     "enabled": true,
     "directory": "./transcripts",
