--- a/config-example.json
+++ b/config-example.json
@@ -13,5 +13,9 @@
     "directory": "./transcripts",
     "maxBytes": 10485760,
     "maxFiles": 20
+  },
+  "ui": {
+    "fontFamily": "Monospaced",
+    "fontSize": 12
   }
 }
