Update `config-example.json` to change UI font to "Lucida Console" and increase font size to 20.

--- a/config-example.json
+++ b/config-example.json
@@ -15,8 +15,7 @@
     "maxFiles": 20
   },
   "ui": {
-    "fontFamily": "Monospaced",
-    "fontSize": 12,
-    "mapZoomPercent": 100
+    "fontFamily": "Lucida Console",
+    "fontSize": 20
   }
 }
