Update `config-example.json` to clarify placeholder text for `#password` alias

--- a/config-example.json
+++ b/config-example.json
@@ -6,7 +6,7 @@
     "connectTimeoutMs": 10000
   },
   "aliases": {
-    "#password": ["E9crNWzX"]
+    "#password": ["Put your password here"]
   },
   "transcript": {
     "enabled": true,
