Refactor `BotConfig` to consolidate map coordinates into array format, update related classes and tests to reflect structure change.

--- a/config-example.json
+++ b/config-example.json
@@ -19,15 +19,15 @@
     "fontSize": 20
   },
   "bookmarks": [
-    { "name": "Mended Drum", "mapId": 1, "x": 718, "y": 802 },
-    { "name": "Bologna shop", "mapId": 1, "x": 648, "y": 897 }
+    { "name": "Mended Drum", "target": [1, 718, 802] },
+    { "name": "Bologna shop", "target": [1, 648, 897] }
   ],
   "teleports": {
     "lesa": {
       "reliable": true,
       "locations": [
-        { "command": "tp am-fiddleys-music", "mapId": 1, "x": 774, "y": 323 },
-        { "command": "tp am-milords", "mapId": 1, "x": 1082, "y": 298 }
+        { "command": "tp am-fiddleys-music", "target": [1, 774, 323] },
+        { "command": "tp am-milords", "target": [1, 1082, 298] }
       ]
     },
     "maemot": {
