Add "Job Market" bookmark to `config-example.json`

--- a/config-example.json
+++ b/config-example.json
@@ -21,6 +21,7 @@
   },
   "bookmarks": [
     { "name": "Mended Drum", "target": [1, 718, 802] },
+    { "name": "Job Market", "target": [1, 699, 905] },
     { "name": "Bologna shop", "target": [1, 648, 897] }
   ],
   "teleports": {
