--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,19 +34,21 @@ jobs:
         cp run-linux.sh dist/
         cp config-example.json dist/config.json
         RELEASE_NAME="DWClient"
-        cd dist && zip -r "../$RELEASE_NAME.zip" .
+        ZIP_NAME="DWClient-${{ github.ref_name }}.zip"
+        cd dist && zip -r "../$ZIP_NAME" .
         echo "RELEASE_NAME=$RELEASE_NAME" >> $GITHUB_ENV
+        echo "ZIP_NAME=$ZIP_NAME" >> $GITHUB_ENV
 
     - name: Upload Artifact
       uses: actions/upload-artifact@v4
       with:
         name: DWClient-zip
-        path: ${{ env.RELEASE_NAME }}.zip
+        path: ${{ env.ZIP_NAME }}
 
     - name: Create Release
       if: startsWith(github.ref, 'refs/tags/')
       uses: softprops/action-gh-release@v2
       with:
-        files: ${{ env.RELEASE_NAME }}.zip
+        files: ${{ env.ZIP_NAME }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
