--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,15 @@
           </execution>
         </executions>
       </plugin>
+
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>3.5.0</version>
+        <configuration>
+          <mainClass>com.danavalerie.matrixmudrelay.Main</mainClass>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
