--- a/config-example.json
+++ b/config-example.json
@@ -6,7 +6,9 @@
     "connectTimeoutMs": 10000
   },
   "aliases": {
-    "#password": ["Put your password here"]
+    "#password": [
+      "Put your password here"
+    ]
   },
   "transcript": {
     "enabled": true,
@@ -20,9 +22,46 @@
     "invertMap": true
   },
   "bookmarks": [
-    { "name": "Mended Drum", "target": [1, 718, 802] },
-    { "name": "Job Market", "target": [1, 699, 905] },
-    { "name": "Bologna shop", "target": [1, 648, 897] }
+    {
+      "name": "Mended Drum",
+      "target": [
+        1,
+        718,
+        802
+      ]
+    },
+    {
+      "name": "Job Market",
+      "target": [
+        1,
+        699,
+        905
+      ]
+    },
+    {
+      "name": "Bologna shop",
+      "target": [
+        1,
+        648,
+        897
+      ]
+    },
+    {
+      "name": "Gennie Applebottom's (Ankh-Morpork)",
+      "target": [
+        1,
+        849,
+        558
+      ]
+    },
+    {
+      "name": "Granny Weatherwax (Bad Ass)",
+      "target": [
+        38,
+        1340,
+        182
+      ]
+    }
   ],
   "teleports": {
     "lesa": {
