Replace `nameLabel` with `JComboBox` in `StatsPanel` for character selection, update configuration handling for `characters`, and implement dynamic character list updates

--- a/config-example.json
+++ b/config-example.json
@@ -44,7 +44,7 @@
     }
   ],
   "characters": {
-    "lesa": {
+    "Lesa": {
       "teleports": {
         "reliable": true,
         "locations": [
@@ -267,11 +267,17 @@
         ]
       }
     },
-    "maemot": {
+    "Maemot": {
       "teleports": {
         "reliable": false,
         "locations": []
       }
-    }
+    },
+    "Ngao": {
+      "teleports": {
+        "reliable": false,
+        "locations": []
+      }
+    },
   }
 }
