--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,8 +35,9 @@ jobs:
         cp config-example.json dist/config.json
         cp delivery-routes.json dist/delivery-routes.json
         cp uu_library.json dist/uu_library.json
+        cp npcs.json dist/room-notes.json
+        cp rooms.json dist/room-notes.json
         cp room-notes.json dist/room-notes.json
-        cp database.db dist/database.db
         cp LICENSE dist/LICENSE
         RELEASE_NAME="dwclient"
         ZIP_NAME="dwclient-${{ github.ref_name }}.zip"
