--- a/config-example.json
+++ b/config-example.json
@@ -15,16 +15,7 @@
     "fontFamily": "Monospaced",
     "fontSize": 20,
     "mapZoomPercent": 100,
-    "invertMap": true,
-    "mudMapSplitRatio": 0.8216145833333334,
-    "mapNotesSplitRatio": 0.621822033898305,
-    "chitchatTimerSplitRatio": 0.6899618805590851,
-    "outputSplitRatio": 0.25749167591564925,
-    "timerColumnWidths": [
-      322,
-      322,
-      322
-    ]
+    "invertMap": true
   },
   "bookmarks": [
     {
@@ -70,338 +61,5 @@
         }
       ]
     }
-  ],
-  "characters": {
-    "Lesa": {
-      "teleports": {
-        "reliable": true,
-        "speedwalkingPenalty": 8,
-        "locations": [
-          {
-            "command": "tp am-fiddleys-music",
-            "roomId": "ca679a04ebf851ef96d9ee9c42429e4d943909be"
-          },
-          {
-            "command": "tp am-milords",
-            "roomId": "f653670a6ee9e7868919a5b6b15ce7148acb16d0"
-          },
-          {
-            "command": "tp am-pishe",
-            "roomId": "a6bfcd86381816a351d3ca14221aa6fce511b5d9"
-          },
-          {
-            "command": "tp am-rimwards-gate",
-            "roomId": "606154467ffc43ee165c891889bb597925f7588d"
-          },
-          {
-            "command": "tp badass",
-            "roomId": "1a146e63d6e3a52afca87b52f074688342a5f974"
-          },
-          {
-            "command": "tp balance",
-            "roomId": "375905c93d0b436477125681c2282feeef4232cc"
-          },
-          {
-            "command": "tp banditcamp",
-            "roomId": "89af9ca7d2be71875cd11eed35e49b2b99d55cac"
-          },
-          {
-            "command": "tp barbariancamp-summer",
-            "roomId": "0252ca10d1535e5384ec9890ebe8d2729f18d914"
-          },
-          {
-            "command": "tp barbariancamp-winter",
-            "roomId": "8776b0c4669c4710590c2a6bd7769e2e790da7df"
-          },
-          {
-            "command": "tp bi",
-            "roomId": "ef740e3f6cb0aec56ba6f4c71620cb817b0bb1f0"
-          },
-          {
-            "command": "tp blackglass",
-            "roomId": "087e9ce0a29cb5e1885352a7965d744bf398dfaf"
-          },
-          {
-            "command": "tp bleak",
-            "roomId": "153638d11334e4e573fc0a6dc8fd9efc2ed1627d"
-          },
-          {
-            "command": "tp bp",
-            "roomId": "d062363d6b2bfc7c0168ed1f87121cda103657f0"
-          },
-          {
-            "command": "tp bp-dojo",
-            "roomId": "62c1d0d4a3449a4db14dc64554fecb13f663ad03"
-          },
-          {
-            "command": "tp bp-fish",
-            "roomId": "31170af0c11ebb1cd0f647f1034db5e7f7b7bd86"
-          },
-          {
-            "command": "tp bp-ninja",
-            "roomId": "e52e482a9e087500b71dca1ddb4f46c140d8987d"
-          },
-          {
-            "command": "tp bp-tunawalk",
-            "roomId": "649635b91636ddf97c6b70c4ee513ffc0f865963"
-          },
-          {
-            "command": "tp brassneck",
-            "roomId": "6fbb4a53491fe3ee652b0babe7181ebf3b8dd4a1"
-          },
-          {
-            "command": "tp chronides",
-            "roomId": "64ee40a06178cbddb80935725cb463e2e21770b5"
-          },
-          {
-            "command": "tp death",
-            "roomId": "1bcacf98716e201caca070f20d7299012402ffc5"
-          },
-          {
-            "command": "tp dj",
-            "roomId": "7b09e78f281d3c4b443e98aef58986913b0f3448"
-          },
-          {
-            "command": "tp doctor",
-            "roomId": "efae39d6e661d1f4aea47518b616116cccf81538"
-          },
-          {
-            "command": "tp drum",
-            "roomId": "4b11616f93c94e3c766bb5ad9cba3b61dcc73979"
-          },
-          {
-            "command": "tp ephebe",
-            "roomId": "bb138a9349adf67346cc5819aa31c990084ef2f6"
-          },
-          {
-            "command": "tp escrow",
-            "roomId": "c8eb2874de9ad3cf41e7120edf09a0dbb5a77585"
-          },
-          {
-            "command": "tp forest-pishe",
-            "roomId": "288f14413021b378e72076615d07d4ddc6089622"
-          },
-          {
-            "command": "tp genua",
-            "roomId": "88a5a8639b1f92da0b1130c9a491ea28542a0fd5"
-          },
-          {
-            "command": "tp goosegate",
-            "roomId": "cca3b4a788b6f7025afe023905c73514ceb395a8"
-          },
-          {
-            "command": "tp granny",
-            "roomId": "dd6ea42f55c3aa6c5feef300bcfc27634bda217a"
-          },
-          {
-            "command": "tp hillshire",
-            "roomId": "e957156f0f75d89cf263b661f630435099b44b66"
-          },
-          {
-            "command": "tp holywood",
-            "roomId": "4bc88d12c0917d4380ee024b526595b832df490a"
-          },
-          {
-            "command": "tp horse",
-            "roomId": "4da8fd81aa0b5a2f2ee06cc4ca52ed5c618a95cd"
-          },
-          {
-            "command": "tp jobs",
-            "roomId": "a5846b0acd26afec87c2dc20daa7ccadecc94cff"
-          },
-          {
-            "command": "tp klatch-foreign-legion",
-            "roomId": "31bf3a3c04cb0009a32aee364747be7761530556"
-          },
-          {
-            "command": "tp lancre",
-            "roomId": "6ef1fc26cedacd2ab099c282942533a74b98c086"
-          },
-          {
-            "command": "tp lanfear",
-            "roomId": "a4a00bc993f97216ace642c94f4bf7cb5ced3764"
-          },
-          {
-            "command": "tp madstoat",
-            "roomId": "36e23a9697d5123e220744d9fc82ed544d765078"
-          },
-          {
-            "command": "tp madwolf",
-            "roomId": "19b30aabaecbf5960ad7066d6eba782ba173ac91"
-          },
-          {
-            "command": "tp nowhere",
-            "roomId": "ef8dea6037376b168f48c9b68d436be95bb342b1"
-          },
-          {
-            "command": "tp oasis",
-            "roomId": "482f82180dfd58da05af5e4ae5c7c2b5b159f06e"
-          },
-          {
-            "command": "tp oc",
-            "roomId": "93bf68291d0dbc25680ffb5f42e35e6516b264eb"
-          },
-          {
-            "command": "tp pekanford",
-            "roomId": "3e8df84018719b734c59d5e7e14793f9b5040c70"
-          },
-          {
-            "command": "tp pishe",
-            "roomId": "3e8df84018719b734c59d5e7e14793f9b5040c70"
-          },
-          {
-            "command": "tp postoffice",
-            "roomId": "109a9d6ff64b288e95580099e5b72864d67e4d33"
-          },
-          {
-            "command": "tp razorback",
-            "roomId": "1212b8ffdc79082c01580ff424356b7d032c31b5"
-          },
-          {
-            "command": "tp satorsquare",
-            "roomId": "28cb1a4206a92b895d0941164d516491748ef4ef"
-          },
-          {
-            "command": "tp scrogden",
-            "roomId": "5c2ff14f357b50a676d3ee02a73e3710e2d34020"
-          },
-          {
-            "command": "tp scry",
-            "roomId": "3bbc93f1a0af0f4be503ce2969fc5b83061d68a8"
-          },
-          {
-            "command": "tp sheepridge",
-            "roomId": "7cdff063a132319a743af7d7d4c38c51ddb6e2d2"
-          },
-          {
-            "command": "tp slice",
-            "roomId": "eb5de57e4ca48dfd9324bd3c9cd66f5c0e1aeddf"
-          },
-          {
-            "command": "tp slipperyhollow",
-            "roomId": "fe1bf5763a4420f441744cc8cebb01be4f1a5ee9"
-          },
-          {
-            "command": "tp stickenplace",
-            "roomId": "514c484b96d69e11b531189bca3ed3a066f08e66"
-          },
-          {
-            "command": "tp stolat",
-            "roomId": "326449a847b703d051fd8efcc2717087a2de429e"
-          },
-          {
-            "command": "tp tosg",
-            "roomId": "66554124844ec7ce36bf94728b529c27a2618016"
-          }
-        ]
-      },
-      "timers": {
-        "Foreign Goods": {
-          "expirationTime": 1769267735784,
-          "durationMs": 3600000
-        }
-      },
-      "gpRateSamples": [
-        4,
-        5,
-        4,
-        4,
-        3
-      ],
-      "hpRateSamples": [
-        4,
-        5,
-        4,
-        4,
-        4
-      ]
-    },
-    "Maemot": {
-      "teleports": {
-        "reliable": false,
-        "speedwalkingPenalty": 30,
-        "locations": [
-          {
-            "name": "Ankh-Morpork (Mended Drum)",
-            "command": "tp drum",
-            "roomId": "4b11616f93c94e3c766bb5ad9cba3b61dcc73979"
-          },
-          {
-            "name": "Djelibeybi (Market Crossroads)",
-            "command": "tp dj",
-            "roomId": "4ed9b9006731e04ade1ed9c34d41861fbe8ae1b1"
-          },
-          {
-            "name": "Ephebe (Glaxos)",
-            "command": "tp glaxos",
-            "roomId": "c4ef5a570d4d747808791e2181c848fc7443fefe"
-          },
-          {
-            "name": "Bes Pelargic (Middle Bridge)",
-            "command": "tp bp",
-            "roomId": "d062363d6b2bfc7c0168ed1f87121cda103657f0"
-          },
-          {
-            "name": "Ankh-Morpork (Five Ways)",
-            "command": "tp fiveways",
-            "roomId": "5d05e86948b486a3d01a21ded57ba1c1b2ba3d4c"
-          },
-          {
-            "name": "Genua (Genua National Bank)",
-            "command": "tp genua",
-            "roomId": "35ea94550b0f3b7a800e5141e1f0251278ecfe3c"
-          }
-        ]
-      },
-      "timers": {
-        "Foreign Goods": {
-          "expirationTime": 1769268895795,
-          "durationMs": 3600000
-        },
-        "Rare Items": {
-          "expirationTime": 1769267191620,
-          "durationMs": 3600000
-        }
-      },
-      "gpRateSamples": [
-        4,
-        4,
-        4,
-        4,
-        4
-      ],
-      "hpRateSamples": [
-        4,
-        4,
-        4,
-        4,
-        4
-      ]
-    },
-    "Ngao": {
-      "teleports": {
-        "reliable": false,
-        "speedwalkingPenalty": 8
-      },
-      "timers": {
-        "Foreign Goods": {
-          "expirationTime": 1769269638800,
-          "durationMs": 3600000
-        }
-      }
-    },
-    "Bpla": {
-      "teleports": {
-        "reliable": true,
-        "speedwalkingPenalty": 8
-      },
-      "gpRateSamples": [
-        -1,
-        -1,
-        -1,
-        3,
-        3
-      ]
-    }
-  }
+  ]
 }
